fix:修改一些小点和新增一些测试文件

--- a/source/_posts/🍓前端知识分类/CSS相关类/del.html
+++ b/source/_posts/🍓前端知识分类/CSS相关类/del.html
@@ -1,39 +1,26 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>lixingjuan-grid-test</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <style>
+      .demo {
+        width: 100px;
+        height: 300px;
+        background-color: red;
+        margin: 30px;
+        padding: 40px;
+        float: left;
+        filter: alpha(opacity = 50);
+      }
+      .two {
+        background-color: yellow;
+      }
+    </style>
   </head>
   <body>
-    <div>
-      <h2>px</h2>
-      <div id="container">
-        <div class="item item-1">1</div>
-        <div class="item item-2">2</div>
-        <div class="item item-3">3</div>
-        <div class="item item-4">4</div>
-        <div class="item item-5">5</div>
-        <div class="item item-6">6</div>
-        <div class="item item-7">7</div>
-        <div class="item item-8">8</div>
-        <div class="item item-9">9</div>
-      </div>
-    </div>
-
-    <div>
-      <h2>百分比</h2>
-      <div id="container2">
-        <div class="item item-1">1</div>
-        <div class="item item-2">2</div>
-        <div class="item item-3">3</div>
-        <div class="item item-4">4</div>
-        <div class="item item-5">5</div>
-        <div class="item item-6">6</div>
-        <div class="item item-7">7</div>
-        <div class="item item-8">8</div>
-        <div class="item item-9">9</div>
-      </div>
-    </div>
+    <div class="demo">22</div>
+    <div class="demo two">22</div>
+    <section>test</section>
   </body>
 </html>
