--- a/source/_posts/🍓前端知识分类/CSS相关类/del.html
+++ b/source/_posts/🍓前端知识分类/CSS相关类/del.html
@@ -2,25 +2,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <style>
-      .demo {
-        width: 100px;
-        height: 300px;
-        background-color: red;
-        margin: 30px;
-        padding: 40px;
-        float: left;
-        filter: alpha(opacity = 50);
+      .left {
+        background-color: #128323;
       }
-      .two {
-        background-color: yellow;
+      .center {
+        background-color: #c9b22f;
+      }
+      .right {
+        background-color: #f03ac2;
+      }
+      #container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .left {
+        width: 20%;
+        order: 0;
+        flex-basis: 60px;
+      }
+      .center {
+        flex-grow: 1;
+        order: 1;
+      }
+      .right {
+        width: 30%;
+        order: 2;
+        flex-basis: 60px;
       }
     </style>
   </head>
   <body>
-    <div class="demo">22</div>
-    <div class="demo two">22</div>
-    <section>test</section>
+    <div id="container">
+      <div class="center">center</div>
+      <div class="left">left</div>
+      <div class="right">right</div>
+    </div>
   </body>
 </html>
