--- a/source/_posts/🍓前端知识分类/CSS相关类/del.html
+++ b/source/_posts/🍓前端知识分类/CSS相关类/del.html
@@ -5,43 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <style>
-      .left {
-        background-color: #128323;
-      }
-      .center {
-        background-color: #c9b22f;
-      }
-      .right {
-        background-color: #f03ac2;
-      }
-      #container {
+      .flex {
         width: 100%;
         height: 100%;
         display: flex;
-        justify-content: space-between;
+        flex-wrap: wrap;
       }
-
-      .left {
-        width: 20%;
-        order: 0;
-        flex-basis: 60px;
-      }
-      .center {
-        flex-grow: 1;
-        order: 1;
-      }
-      .right {
-        width: 30%;
-        order: 2;
-        flex-basis: 60px;
+      .item {
+        width: calc(100% / 3);
+        box-sizing: border-box;
+        padding-bottom: calc(100% / 3);
+        border: 1px #ccc solid;
       }
     </style>
   </head>
   <body>
-    <div id="container">
-      <div class="center">center</div>
-      <div class="left">left</div>
-      <div class="right">right</div>
+    <div class="flex">
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
     </div>
   </body>
 </html>
