fix:隐藏一部分

--- a/source/_posts/1-前端知识分类/CSS相关类/del.html
+++ b/source/_posts/1-前端知识分类/CSS相关类/del.html
@@ -14,7 +14,7 @@
       .item {
         width: calc(100% / 3);
         box-sizing: border-box;
-        padding-bottom: calc(100% / 3);
+        /* padding-bottom: calc(100% / 3); */
         border: 1px #ccc solid;
       }
     </style>
