fix: 添加一个面试记录

--- a/del.html
+++ b/del.html
@@ -1,49 +1,49 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-    ul.one {
-      display: flex;
-      flex-wrap: wrap-reverse;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <style>
+      .clickFather {
+        border: 1px solid red;
+        width: 80%;
+        height: 300px;
+      }
+      .clickSon {
+        border: 1px solid red;
+        width: 80%;
+        height: 300px;
+      }
+      .clickInner {
+        border: 1px solid red;
+        width: 80%;
+        height: 300px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="clickFather">
+      <div class="clickSon" onclick="clickSon(e)">
+        <div class="clickInner" onclick="clickInner()">22</div>
+      </div>
+    </div>
+    <script>
+      const clickFatherDom = document.querySelector(".clickFather");
 
-    ul.two {
-      display: flex;
-      flex-wrap: wrap;
-    }
-    li {
-      box-sizing: border-box;
-      width: 33.3%;
-      flex-shrink: 0;
-      border: 1px dashed rgb(42, 197, 236);
-    }
-  </style>
-</head>
-<body>
-
-  <ul class="one">
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-    <li>4</li>
-    <li>5</li>
-    <li>6</li>
-    <li>7</li>
-    <li>8</li>
-  </ul>
-
-  <ul class="two">
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-    <li>4</li>
-    <li>5</li>
-    <li>6</li>
-    <li>7</li>
-    <li>8</li>
-  </ul>
-</body>
+      console.log({ clickFatherDom });
+      function clickFather(event) {
+        debugger;
+        console.log({ event });
+        alert("click father");
+      }
+      function clickSon() {
+        alert("click son");
+      }
+      function clickInner() {
+        alert("click inner");
+      }
+      clickFatherDom.addEventListener("click", clickFather, true);
+    </script>
+  </body>
 </html>
