--- a/02-steup-app/index.html
+++ b/02-steup-app/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./hello-world.js"></script>
-    <script src="./index.js"></script>
+    <script src="./src/hello-world.js" type="text/javascript"></script>
+    <script src="./src/index.js" type="text/javascript"></script>
   </body>
 </html>
