--- a/09-caching/index.html
+++ b/09-caching/index.html
@@ -6,5 +6,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>lixingjuan</title>
   </head>
-  <body><script defer src="vendors-node_modules_lodash_lodash_js.bundle.js"></script><script defer src="index.bundle.js"></script><script defer src="another.bundle.js"></script></body>
+  <body></body>
 </html>
