--- a/React/debug-react/index.html
+++ b/React/debug-react/index.html
@@ -6,28 +6,80 @@
     <script src="./react.development.js"></script>
     <script src="./react-dom.development.js"></script>
 
+    <!-- Load history -->
+    <script src="./history.development.js" crossorigin></script>
+
+    <!-- Load React Router and React Router DOM -->
+    <script src="./react-router.development.js" crossorigin></script>
+    <script src="./react-router-dom.development.js" crossorigin></script>
+
     <!-- Don't use this in production: -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
     <script type="text/babel">
+      var e = React.createElement;
+      var Router = ReactRouterDOM.HashRouter;
+      var Routes = ReactRouterDOM.Routes;
+      var Route = ReactRouterDOM.Route;
+
+      function Home() {
+        return <h1>Home</h1>;
+      }
+
+      function PageOne(props) {
+        console.log({ props });
+        return <h1>PageOne</h1>;
+      }
+
       function MyApp() {
         console.log("ceeee", "组件开始");
         const [count, setCount] = React.useState(0);
 
         console.log({ React });
         return (
-          <div>
-            <div>count {count}</div>
-            <button onClick={() => setCount((pre) => pre + 1)}>add</button>
-          </div>
+          <Router>
+            <div>
+              <h1>Hello, React Router!</h1>
+              <Routes>
+                <Route path="/" element={<Home />} />
+                <Route path="/page1" element={<PageOne />} />
+              </Routes>
+            </div>
+          </Router>
         );
+
+        // return (
+        // <Router>
+        // <div>count {count}</div>
+        // <button onClick={() => setCount((pre) => pre + 1)}>add</button>
+        // <Routes>
+        // <Route>page1</Route>
+        // <Route>page2</Route>
+        // </Routes>
+        // </Router>
+        // );
       }
 
       const container = document.getElementById("root");
       const root = ReactDOM.createRoot(container);
       root.render(<MyApp />);
+
+      // ReactDOM.render(
+      // e(
+      // Router,
+      // null,
+      // e(
+      // Routes,
+      // null,
+      // e(Route, {
+      // element: e("div", null, "Hello, React Router!"),
+      // })
+      // )
+      // ),
+      // document.getElementById("root")
+      // );
     </script>
     <!--
       Note: this page is a great way to try React but it's not suitable for production.
