--- a/del.html
+++ b/del.html
@@ -4,17 +4,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      .box {
-        display: grid;
-        grid-template-columns: repeat(3, 33.3%);
+      .box1 {
+        width: 200px;
+        height: 200px;
+        background-color: green;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 200px;
+      }
+      .box2 {
+        width: 100px;
+        height: 100px;
+        background-color: pink;
+        margin-top: 100px;
       }
     </style>
   </head>
   <body>
-    <div class="box">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-    </div>
+    <div class="box1"></div>
+    <div class="box2"></div>
   </body>
 </html>
