--- a/del.html
+++ b/del.html
@@ -1,28 +1,29 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      .box1 {
-        width: 200px;
-        height: 200px;
-        background-color: green;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 200px;
-      }
-      .box2 {
-        width: 100px;
-        height: 100px;
-        background-color: pink;
-        margin-top: 100px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="box1"></div>
-    <div class="box2"></div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <style>
+    .font-weight-400 {
+      font-weight: 400;
+    }
+
+    .font-weight-500 {
+      font-weight: 500;
+    }
+
+    .font-weight-600 {
+      font-weight: 600;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="font-weight-400">我哈哈哈哈400</div>
+  <div class="font-weight-500">我哈哈哈哈500</div>
+  <div class="font-weight-600">我哈哈哈哈600</div>
+
+</body>
+
 </html>
