--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <title>File Tree</title>
       <link rel="stylesheet" href="/assets/css/styles.css">
-        <base href="blog">
+        <base href="/blog/">
     </head>
     <body>
       <div id="box">
