--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
         list-style: none;
         padding-left: 0px;
       }
+      ul > li > a {
+        color: #0969da;
+      }
     </style>
     <script type="text/babel">
       const AppContext = React.createContext();
